--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.ClaudyaSalim_sesi2"
         tools:targetApi="31">
         <activity
-            android:name=".SettingsActivity"
+            android:name=".UserActivity"
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
